--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm run build
 
   audit:
-    if: (github.event_name == 'pull_request' && (github.base_ref == 'refs/heads/main' || github.base_ref == 'refs/heads/release')) || (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release'))
+    if: github.event_name == 'pull_request' && (github.base_ref == 'main' || github.base_ref == 'release')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
