--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,10 +73,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest .
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:${{ github.sha }} .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:${{ github.sha }}
 
   deploy:
     if: github.ref == 'refs/heads/release'
@@ -94,4 +94,4 @@ jobs:
           az containerapp update \
             --name startup-nextjs \
             --resource-group DevOps \
-            --image ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest
+            --image ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:${{ github.sha }}
