--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -77,5 +77,6 @@ jobs:
 
       - name: Apply Terraform configuration
         env:
-          TF_VAR_STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID: ${{ secrets.STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID }}
+          TF_VAR_azure_subscription_id: ${{ secrets.STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID }}
+          TF_VAR_azure_tenant_id: ${{ secrets.STARTUPNEXTJS_AZURE_TENANT_ID }}
         run: terraform apply -auto-approve
