--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,7 +76,4 @@ jobs:
         run: terraform init
 
       - name: Apply Terraform configuration
-        env:
-          TF_VAR_azure_subscription_id: ${{ secrets.STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID }}
-          TF_VAR_azure_tenant_id: ${{ secrets.STARTUPNEXTJS_AZURE_TENANT_ID }}
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="azure_subscription_id=${{ secrets.STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID }}"
