--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,8 +72,10 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Azure login with Managed Identiy
-        run: az login --identity --username ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          identity: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
 
       - name: Initialize Terraform
         run: terraform init
