--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
 
+      - name: Enable Terraform logging
+        run: export TF_LOG=DEBUG
+
       - name: Azure Login
         uses: azure/login@v1
         with:
