--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,6 +62,22 @@ jobs:
       - name: Run audit
         run: npm audit
 
+  docker:
+    if: github.ref == 'refs/heads/release'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest
+
   terraform-apply:
     if: github.ref == 'refs/heads/release'
     runs-on: ubuntu-latest
@@ -81,8 +97,8 @@ jobs:
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
-          tenant-id: ${{ secrets.STARTUPNEXTJS_AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.STARTUPNEXTJS_AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Initialize Terraform
         run: terraform init
