--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -101,8 +101,21 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Download Terraform State
+        uses: actions/download-artifact@v2
+        with:
+          name: terraform-state 
+
       - name: Initialize Terraform
         run: terraform init
 
-      - name: Apply Terraform configuration
-        run: terraform apply -auto-approve
+      - name: Apply and Save Terraform State as Artifact
+        run: |
+          terraform apply -auto-approve
+          cp terraform.tfstate state/
+          
+      - name: Upload Terraform State
+        uses: actions/upload-artifact@v2
+        with:
+          name: terraform-state
+          path: state/terraform.tfstate
