--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,21 +100,11 @@ jobs:
           client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        
-      - name: Restore Terraform State (if exists)
-        uses: actions/cache/restore@v4
-        with:
-          path: terraform.tfstate
-          key: terraform.tfstate
 
       - name: Initialize Terraform
         run: terraform init
 
       - name: Terraform Apply
+        env:
+          ARM_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_KEY }}
         run: terraform apply -auto-approve
-
-      - name: Cache Terraform State
-        uses: actions/cache/save@v4
-        with:
-          path: terraform.tfstate
-          key: terraform.tfstate
