--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,4 +105,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var "ARM_ACCESS_KEY=${{ secrets.AZURE_STORAGE_KEY }}"
+        run: terraform apply -auto-approve
