--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,7 +83,7 @@ jobs:
     # todo needs: docker
     runs-on: ubuntu-latest
     permissions:
-      id-token: write #This is required for requesting the OIDC JWT Token
+      id-token: write # This is required for requesting the OIDC JWT Token
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -97,7 +97,8 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
+          auth-type: IDENTITY
+#          client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
