--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,7 +98,7 @@ jobs:
         uses: azure/login@v1
         with:
           auth-type: IDENTITY
-#          client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
+          client-id: ${{ secrets.AZURE_MANAGED_IDENTITY_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
