--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,15 +73,18 @@ jobs:
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:${{ github.sha }} .
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/startup-nextjs:latest
 
   terraform-apply:
     if: github.ref == 'refs/heads/release'
     needs: docker
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required for requesting the OIDC JWT Token
+      contents: read # Required when GH token is used to authenticate with private repo
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -99,6 +102,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        env:
-          CONTAINER_IMAGE_TAG: ${{ github.sha }}
         run: terraform apply -auto-approve
