Update ci-cd.yml and main.tf

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,6 +99,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        env:
-          CONTAINER_IMAGE_TAG: ${{ github.sha }}
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var "container_image_tag=${{ github.sha }}"
